JumpScript/tests/baselines/reference/moduleResolutionNoTs.errors.txt
tests/cases/compiler/user.jump(1,15): error TS2691: An import path cannot end with a '.jump' extension. Consider importing './x' instead.
tests/cases/compiler/user.jump(2,15): error TS2691: An import path cannot end with a '.jmpx' extension. Consider importing './y' instead.
tests/cases/compiler/user.jump(3,15): error TS2691: An import path cannot end with a '.d.jump' extension. Consider importing './z' instead.


==== tests/cases/compiler/x.jump (0 errors) ====
    export default 0;
    
==== tests/cases/compiler/y.jmpx (0 errors) ====
    export default 0;
    
==== tests/cases/compiler/z.d.jump (0 errors) ====
    declare const x: number;
    export default x;
    
==== tests/cases/compiler/user.jump (3 errors) ====
    import x from "./x.jump";
                  ~~~~~~~~
!!! error TS2691: An import path cannot end with a '.jump' extension. Consider importing './x' instead.
    import y from "./y.jmpx";
                  ~~~~~~~~~
!!! error TS2691: An import path cannot end with a '.jmpx' extension. Consider importing './y' instead.
    import z from "./z.d.jump";
                  ~~~~~~~~~~
!!! error TS2691: An import path cannot end with a '.d.jump' extension. Consider importing './z' instead.
    
    // Making sure the suggested fixes are valid:
    import x2 from "./x";
    import y2 from "./y";
    import z2 from "./z";
    